--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: Jacob Gable
-description: My home page
+description: Computer Science Student
 show_downloads: false
